Chore:Fix contrast on links and add focus

--- a/app/styles/links.scss
+++ b/app/styles/links.scss
@@ -3,11 +3,17 @@ a {
 	cursor:pointer;
 	display:inline-block;
     text-decoration:none;
-	color:var(--text-color);
+	color:var(--link-color);
 	transition:color 0.3s;
 
 	&:hover {
 		color:var(--hover-color);
+	}
+
+	&:focus {
+		outline: 2px solid #ea20e3 ; /* for non-webkit browsers */
+		outline: 5px auto #ea20e3 -webkit-focus-ring-color;
+		border-radius: 5px;
 	}
 
 	span + i {
