--- a/app/styles/text.scss
+++ b/app/styles/text.scss
@@ -10,6 +10,11 @@ h1 {
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 
+	&:focus {
+		outline: 2px solid #ea20e3 ; /* for non-webkit browsers */
+		outline: 5px auto #ea20e3 -webkit-focus-ring-color;
+		border-radius: 5px;
+	}
 	span[gradient] {
 		background: -moz-linear-gradient(-60deg, rgba(135, 0, 255, 1) 0%, rgba(255, 0, 158, 1) 100%);
 		background: -webkit-linear-gradient(-60deg, rgba(135, 0, 255, 1) 0%, rgba(255, 0, 158, 1) 100%);
@@ -58,6 +63,12 @@ h2 {
 	color: var(--text-color);
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+
+	&:focus {
+		outline: 2px solid #ea20e3 ; /* for non-webkit browsers */
+		outline: 5px auto #ea20e3 -webkit-focus-ring-color;
+		border-radius: 5px;
+	}
 
 	span[gradient] {
 		background: -moz-linear-gradient(-60deg, rgba(135, 0, 255, 1) 0%, rgba(255, 0, 158, 1) 100%);
