--- a/app/styles/vars.scss
+++ b/app/styles/vars.scss
@@ -35,6 +35,7 @@
 		--back-color:#1a202d;		// Background page colour
 		--dark-color:#363c4e;		// Colour of dark text in boxes
 		--faint-color:#989cad;		// Colour of faint text
+		--link-color:#ff23ab;		// Colour of links
 		--hover-color:#ff009e;		// Colour of links when hovering
 		--popup-color:#272e3c;		// Colour of popup modal window
 		--coder-color:#272e3c;		// Colour of code box elements
